[gd_scene load_steps=4 format=3 uid="uid://47oenbci4as6"]

[ext_resource type="Script" path="res://Scenes/SequenceEditor/level_sequence_editor.gd" id="1_j0kp2"]
[ext_resource type="PackedScene" uid="uid://dyb5brr6c3174" path="res://Scenes/LevelSelector/level_sel_dropdown.tscn" id="3_eqtec"]
[ext_resource type="PackedScene" uid="uid://ddmv7vhwldudp" path="res://Scenes/UI/level_data_export.tscn" id="3_nwl2l"]

[node name="LevelSequenceEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j0kp2")

[node name="level_data_export" parent="." instance=ExtResource("3_nwl2l")]
visible = false
layout_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CurLevelSet" parent="." instance=ExtResource("3_eqtec")]
layout_mode = 1
anchor_left = 0.28125
anchor_right = 0.62
anchor_bottom = 0.991111

[node name="ClipboardSet" parent="." instance=ExtResource("3_eqtec")]
layout_mode = 1
anchor_left = 0.625
anchor_right = 0.973125

[node name="LevelSet_List" type="OptionButton" parent="."]
layout_mode = 0
anchor_left = 0.035625
anchor_top = 0.101111
anchor_right = 0.253125
anchor_bottom = 0.252222
offset_right = -3.05176e-05
offset_bottom = 1.52588e-05
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.0125
anchor_top = 0.694444
anchor_right = 0.2475
anchor_bottom = 0.853333
theme_override_font_sizes/font_size = 42
text = "Return"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.014375
anchor_top = 0.486667
anchor_right = 0.249375
anchor_bottom = 0.645556
theme_override_font_sizes/font_size = 42
text = "Reload current"
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.014375
anchor_top = 0.285556
anchor_right = 0.249375
anchor_bottom = 0.444444
theme_override_font_sizes/font_size = 42
text = "Save current"
metadata/_edit_use_anchors_ = true

[connection signal="editSignal" from="CurLevelSet" to="." method="pass_edit_direct"]
[connection signal="fileSaveSignal" from="CurLevelSet" to="." method="save_levelset"]
[connection signal="moveSignal" from="CurLevelSet" to="." method="load_to_clipboard"]
[connection signal="editSignal" from="ClipboardSet" to="." method="pass_edit_clipboard"]
[connection signal="moveSignal" from="ClipboardSet" to="." method="save_from_clipboard"]
[connection signal="item_selected" from="LevelSet_List" to="." method="choose_levelset"]
[connection signal="pressed" from="Button" to="." method="toMenuFn"]
[connection signal="pressed" from="Button2" to="." method="toMenuFn"]
[connection signal="pressed" from="Button3" to="." method="toMenuFn"]
